refactor/#279: Admin, Owner, Resume, School, Security, Term, TermAccount, User, Version에 헥사고날 아키텍처 적용