@@ -1,112 +1,122 @@
 package com.inglo.giggle.resume.application.service;
 
-import com.inglo.giggle.account.domain.User;
-import com.inglo.giggle.resume.application.vo.EducationWithSchoolDto;
-import com.inglo.giggle.resume.application.vo.ResumeAggregateWithUserDto;
-import com.inglo.giggle.resume.application.usecase.ReadUserResumeDetailUseCase;
-import com.inglo.giggle.resume.domain.AdditionalLanguage;
+import com.inglo.giggle.core.type.EGender;
+import com.inglo.giggle.core.type.EVisa;
+import com.inglo.giggle.core.utility.DateTimeUtil;
+import com.inglo.giggle.resume.application.port.in.dto.EducationWithSchoolNameDto;
+import com.inglo.giggle.resume.application.port.in.dto.ResumeDetailDto;
+import com.inglo.giggle.resume.application.port.in.query.ReadUserResumeDetailQuery;
+import com.inglo.giggle.resume.application.port.in.result.ReadUserResumeDetailResult;
+import com.inglo.giggle.resume.application.port.out.LoadResumePort;
 import com.inglo.giggle.resume.domain.Education;
-import com.inglo.giggle.resume.domain.LanguageSkill;
 import com.inglo.giggle.resume.domain.Resume;
-import com.inglo.giggle.resume.domain.ResumeAggregate;
-import com.inglo.giggle.resume.domain.WorkExperience;
-import com.inglo.giggle.resume.persistence.repository.AdditionalLanguageRepository;
-import com.inglo.giggle.resume.persistence.repository.EducationRepository;
-import com.inglo.giggle.resume.persistence.repository.LanguageSkillRepository;
-import com.inglo.giggle.resume.persistence.repository.ResumeRepository;
-import com.inglo.giggle.resume.persistence.repository.WorkExperienceRepository;
-import com.inglo.giggle.resume.presentation.dto.response.ReadUserResumeDetailResponseDto;
-import com.inglo.giggle.school.domain.School;
-import com.inglo.giggle.school.persistence.repository.SchoolRepository;
-import com.inglo.giggle.security.domain.Account;
-import com.inglo.giggle.security.persistence.repository.AccountRepository;
+import com.inglo.giggle.school.application.port.in.query.ReadUserSchoolBriefByIdsQuery;
+import com.inglo.giggle.school.application.port.in.result.ReadUserSchoolBriefByIdsResult;
+import com.inglo.giggle.user.application.port.in.query.ReadUserSelfDetailQuery;
+import com.inglo.giggle.user.application.port.in.result.ReadUserSelfDetailResult;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDate;
+import java.time.temporal.ChronoUnit;
 import java.util.List;
-import java.util.Map;
+import java.util.Objects;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-public class ReadUserResumeDetailService implements ReadUserResumeDetailUseCase {
+public class ReadUserResumeDetailService implements ReadUserResumeDetailQuery {
 
-    private final AccountRepository accountRepository;
-    private final ResumeRepository resumeRepository;
-    private final EducationRepository educationRepository;
-    private final LanguageSkillRepository languageSkillRepository;
-    private final AdditionalLanguageRepository additionalLanguageRepository;
-    private final WorkExperienceRepository workExperienceRepository;
-    private final SchoolRepository schoolRepository;
+    private final LoadResumePort loadResumePort;
+    private final ReadUserSchoolBriefByIdsQuery readUserSchoolBriefByIdsQuery;
+    private final ReadUserSelfDetailQuery readUserSelfDetailQuery;
 
     @Override
     @Transactional(readOnly = true)
-    public ReadUserResumeDetailResponseDto execute(UUID accountId) {
+    public ReadUserResumeDetailResult execute(UUID accountId) {
 
-        // ResumeAggregate 생성
-        ResumeAggregate resumeAggregate = getResumeAggregate(accountId);
-
-        // ResumeAggregateWithUserDto 생성
-        ResumeAggregateWithUserDto resumeAggregateWithUserDto = getResumeAggregateWithUserDto(resumeAggregate);
-
-        // EducationWithSchoolDtos 생성
-        List<EducationWithSchoolDto> educationWithSchoolDtos = getEducationWithSchoolDtos(resumeAggregate.getEducations());
-
-        return ReadUserResumeDetailResponseDto.of(resumeAggregateWithUserDto, educationWithSchoolDtos);
-    }
-
-    /* ---------------------------------------------------------------------------------------------------------------*
-     * -------                                       private method                                            -------*
-     * -------------------------------------------------------------------------------------------------------------- */
-    private ResumeAggregate getResumeAggregate(UUID resumeId) {
         // Resume 조회
-        Resume resume = resumeRepository.findByAccountIdOrElseThrow(resumeId);
+        Resume resume = loadResumePort.loadResume(accountId);
 
-        // education 조회
-        List<Education> educations = educationRepository.findAllByResumeId(resume.getAccountId());
-
-        // LanguageSkill 조회
-        LanguageSkill languageSkill = languageSkillRepository.findByResumeIdOrElseThrow(resume.getAccountId());
-
-        // WorkExperience 조회
-        List<WorkExperience> workExperiences = workExperienceRepository.findAllByResumeId(resume.getAccountId());
-
-        // AdditionalLanguage 조회
-        List<AdditionalLanguage> additionalLanguages = additionalLanguageRepository.findAllByLanguageSkillId(languageSkill.getResumeId());
-
-        // ResumeAggregate 생성
-        return ResumeAggregate.builder()
-                .resume(resume)
-                .educations(educations)
-                .languageSkill(languageSkill)
-                .workExperiences(workExperiences)
-                .additionalLanguages(additionalLanguages)
-                .build();
-    }
-
-    private List<EducationWithSchoolDto> getEducationWithSchoolDtos(List<Education> educations) {
-        // School 조회
-        List<School> schools = schoolRepository.findAllByIds(educations.stream()
+        ReadUserSchoolBriefByIdsResult schoolBriefResult = readUserSchoolBriefByIdsQuery.execute(resume.getEducations().stream()
                 .map(Education::getSchoolId)
-                .toList());
+                .collect(Collectors.toList()));
 
-        // School Map 생성
-        Map<Long, School> schoolMap = schools.stream()
-                .collect(Collectors.toMap(School::getId, s -> s));
+        ReadUserSelfDetailResult readUserDetailResult = readUserSelfDetailQuery.execute(accountId);
 
-        // EducationWithSchoolDto 생성
-        return educations.stream()
-                .map(education -> new EducationWithSchoolDto(education, schoolMap.get(education.getSchoolId())))
+        // Education 과 School 이름 매핑
+        List<EducationWithSchoolNameDto> educationWithSchoolNameDtos = resume.getEducations().stream()
+                .map(education -> {
+                    String schoolName = schoolBriefResult.getSchoolList().stream()
+                            .filter(school -> school.getId().equals(education.getSchoolId()))
+                            .findFirst()
+                            .map(ReadUserSchoolBriefByIdsResult.SchoolListDto::getName)
+                            .orElse(null);
+                    return new EducationWithSchoolNameDto(education.getId(), education.getEducationLevel(), education.getMajor(), education.getGpa(), education.getEnrollmentDate(), education.getGraduationDate(), education.getGrade(), schoolName);
+                })
                 .toList();
-    }
 
-    private ResumeAggregateWithUserDto getResumeAggregateWithUserDto(ResumeAggregate resumeAggregate) {
-        // User 조회
-        Account userAccount = accountRepository.findByIdOrElseThrow(resumeAggregate.getResume().getAccountId());
+        List<ReadUserResumeDetailResult.WorkExperienceDto> workExperienceDtos;
 
-        // ResumeAggregateWithUserDto 생성
-        return new ResumeAggregateWithUserDto(resumeAggregate, (User) userAccount);
+        // WorkExperienceDtos 생성
+        if (!resume.getWorkExperiences().isEmpty() ) {
+            workExperienceDtos = resume.getWorkExperiences().stream()
+                    .map(workExperience -> ReadUserResumeDetailResult.WorkExperienceDto.of(
+                            workExperience.getId(),
+                            workExperience.getExperienceTitle(),
+                            workExperience.getWorkplace(),
+                            workExperience.getDescription(),
+                            workExperience.getStartDate() != null ? DateTimeUtil.convertLocalDateToString(workExperience.getStartDate()) : null,
+                            workExperience.getEndDate() != null ? DateTimeUtil.convertLocalDateToString(workExperience.getEndDate()) : null,
+                            workExperience.getEndDate() != null ?
+                                    (int) ChronoUnit.MONTHS.between(workExperience.getStartDate(), workExperience.getEndDate())
+                                    : (int) ChronoUnit.MONTHS.between(Objects.requireNonNull(workExperience.getStartDate()), LocalDate.now())
+                    )).toList();
+        } else {
+            workExperienceDtos = null;
+        }
+
+        List<ReadUserResumeDetailResult.LanguageDetailDto> languageDetailDtos;
+
+        // LanguageDetailDtos 생성
+        if (!resume.getLanguageSkill().getAdditionalLanguages().isEmpty()) {
+            languageDetailDtos = resume.getLanguageSkill().getAdditionalLanguages().stream()
+                    .map(language -> ReadUserResumeDetailResult.LanguageDetailDto.of(
+                            language.getId(),
+                            language.getLanguageName(),
+                            language.getLevel()
+                    )).toList();
+        } else {
+            languageDetailDtos = null;
+        }
+
+        // ResumeDetailVO 생성
+        ResumeDetailDto resumeDetailDto = new ResumeDetailDto(
+                resume.getAccountId(),
+                resume.getIntroduction(),
+                readUserDetailResult.getProfileImgUrl(),
+                readUserDetailResult.getFirstName() + " " + readUserDetailResult.getLastName(),
+                EVisa.fromString(readUserDetailResult.getVisa()),
+                EGender.fromString(readUserDetailResult.getGender()),
+                readUserDetailResult.getNationality(),
+                readUserDetailResult.getBirth(),
+                readUserDetailResult.getAddress().getAddressName(),
+                readUserDetailResult.getAddress().getAddressDetail(),
+                readUserDetailResult.getPhoneNumber(),
+                readUserDetailResult.getEmail(),
+                educationWithSchoolNameDtos
+        );
+
+
+        return ReadUserResumeDetailResult.of(
+                resumeDetailDto,
+                workExperienceDtos,
+                resume.getLanguageSkill().getTopikLevel(),
+                resume.getLanguageSkill().getSocialIntegrationLevel(),
+                resume.getLanguageSkill().getSejongInstituteLevel(),
+                languageDetailDtos
+        );
     }
 }
